fix: preserve icon spacing for wrapped links and small buttons
- Replace gap with direct margin-inline-start on ::after for links (works for both inline-flex and inline-block/wrapped cases)
- Add gap: spacing-fixed-2xs for small buttons to preserve smaller icon-to-text spacing

--- a/packages/components/src/components/link/link.scss
+++ b/packages/components/src/components/link/link.scss
@@ -13,8 +13,6 @@
 	@extend %db-default-link;
 	@extend %db-overwrite-font-size-md;
 
-	gap: variables.$db-spacing-fixed-2xs;
-
 	a {
 		// Workaround for angular
 		@extend %db-link-height;
@@ -30,6 +28,10 @@
 		&:not([data-variant="inline"]) {
 			@include icons.set-icon("arrow_up_right", "after");
 		}
+	}
+
+	&::after {
+		margin-inline-start: variables.$db-spacing-fixed-2xs;
 	}
 
 	// We couldn't extend any existing SCSS placeholders, as this is a special construct
@@ -50,6 +52,8 @@
 	&[data-size="small"] {
 		@extend %db-overwrite-font-size-sm;
 
-		gap: variables.$db-spacing-fixed-3xs;
+		&::after {
+			margin-inline-start: variables.$db-spacing-fixed-3xs;
+		}
 	}
 }
