--- a/packages/components/src/styles/internal/_button-components.scss
+++ b/packages/components/src/styles/internal/_button-components.scss
@@ -98,6 +98,7 @@
 			&:not([data-no-text="true"]) {
 				// stylelint-disable-next-line db-ux/use-spacings
 				padding: 1px variables.$db-spacing-fixed-sm;
+				gap: variables.$db-spacing-fixed-2xs;
 			}
 
 			// Square icon only buttons
